[package]
name = "markup-proc-macro"
version = "0.4.1"
authors = ["Utkarsh Kukreti <inferrna@gmail.com>"]
edition = "2018"
description = "A blazing fast, type-safe template engine for Rust."
license = "MIT/Apache-2.0"
documentation = "https://docs.rs/markup"
homepage = "https://github.com/inferrna/markup.rs"
repository = "https://github.com/inferrna/markup.rs"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.3"
quote = "1.0.2"
syn = { version = "1.0.5", features = ["extra-traits", "full"] }
